--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=postgresql://postgres:EVMIZugzZgCPKatpCSdiRwOpwVdARuXS@postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=EVMIZugzZgCPKatpCSdiRwOpwVdARuXS
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
